# ai-risk-manager

./: .gitignore  ALPHA.md  BACKLOG_TRUST_FIRST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  PLAN.md  PLAN_UNIVERSAL_AI.md  PROJECT_REVIEW_2026-06-19.md  PROJECT_REVIEW_FILE_MANIFEST_2026-06-19.tsv  README.md  RELEASE.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SUPPORT.md  dependabot.yml  public-artifacts-allowlist.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: alpha_feedback.yml  bug_report.yml  config.yml  feature_request.yml  pr_review_request.yml  repo_support_request.yml  security_report.yml
.github/actions/setup-python-env/: action.yml
.github/requirements/: release.txt
.github/workflows/: eval-suite.yml  quality.yml  release.yml  risk-analysis.yml
docs/: architecture-next.md  architecture.md  business-invariants.md  capability-signals.md  compatibility.md  deployment-hardening.md  holdout-protocol.md  ingress-contract.md  legacy-review.md  merge-risk-triage-architecture.md  performance.md  plugin-contract.md  roadmap.md  ru.md  stack-expansion-candidates.md  ui-flow-pilots.md  validation-results.md  validation.md  workspaces.md
docs/adr/: 0001-graph-first-integration-risk.md
docs/launch/: product-hunt.md
eval/: capability_pack_promotion.json  dataset_manifest.json  public_prs.json  support_level_promotion.json  trust_thresholds.json
eval/holdout/: cases.json  predictions.json
eval/repos/milestone10_express_authz_gap/server/: app.js
eval/repos/milestone12_express_integrity_balanced/public/: app.js
eval/repos/milestone12_express_integrity_balanced/tests/: test_notes_api.js
eval/repos/milestone12_express_integrity_gap/public/: app.js
eval/repos/milestone13_express_html_balanced/public/: app.js
eval/repos/milestone13_express_html_gap/public/: app.js
eval/repos/milestone13_express_html_gap/server/: app.js
eval/repos/milestone14_express_ui_balanced/public/: app.js  styles.css
eval/repos/milestone14_express_ui_gap/public/: app.js  styles.css
eval/repos/milestone15_fastapi_webhook_ingress/app/: main.py
eval/repos/milestone15_fastapi_webhook_ingress/tests/: test_webhooks.py
eval/repos/milestone16_express_job_cli_ingress/server/: app.js
eval/repos/milestone16_express_job_cli_ingress/tests/: test_ingress.js
eval/repos/milestone17_express_event_consumer_ingress/server/: app.js
eval/repos/milestone17_express_event_consumer_ingress/tests/: test_events.js
eval/repos/milestone18_fastapi_integrity_balanced/app/: main.py
eval/repos/milestone18_fastapi_integrity_gap/app/: main.py
eval/repos/milestone18_fastapi_integrity_gap/tests/: test_notes.py
eval/repos/milestone19_django_integrity_balanced/app/: urls.py  views.py
eval/repos/milestone19_django_integrity_balanced/tests/: test_notes.py
eval/repos/milestone19_django_integrity_gap/app/: views.py
eval/repos/milestone20_fastapi_session_balanced/app/: main.py
eval/repos/milestone8_django_dependency/: requirements.txt
examples/business-invariants/: .riskmap.yml
examples/github-actions/: riskmap-pr-review.yml
examples/gitlab-ci/: riskmap-merge-request-review.yml
examples/ui/: .riskmap-ui.toml
examples/ui/nuxt/: .riskmap-ui.toml
performance/: slo.json
scripts/: check_eval_isolation.py  check_mutation_score.py  check_public_artifacts.py  check_release_tag.py  holdout_reporting.py  holdout_workflow.py  init_stack_plugin.py  run_eval_suite.py  run_performance_suite.py
src/ai_risk_manager/: artifact_io.py  cli.py  external_judge.py  pr_scope.py  public_pr_benchmark.py  sample_repo.py
src/ai_risk_manager/agents/: generic_advisory_agent.py  llm_runtime.py  provider.py  qa_strategy_agent.py  risk_agent.py  semantic_risk_agent.py  semantic_signal_agent.py
src/ai_risk_manager/api/: __init__.py  models.py  server.py
src/ai_risk_manager/collectors/: __init__.py  collector.py  file_discovery.py
src/ai_risk_manager/graph/: builder.py  render.py
src/ai_risk_manager/integrations/: github_pr_comments.py  github_pr_review.py
src/ai_risk_manager/pipeline/: __init__.py  context_builder.py  merge_findings.py  pr_change_signals.py  pr_scope.py  run.py  sinks.py
src/ai_risk_manager/profiles/: __init__.py  base.py  business_invariant.py  code_risk.py  registry.py  ui_flow.py  ui_flow_smoke.py
src/ai_risk_manager/reports/: generator.py
src/ai_risk_manager/rules/: architecture_policy.py  engine.py  policy.py  suppressions.py
src/ai_risk_manager/samples/: __init__.py
src/ai_risk_manager/schemas/: types.py
src/ai_risk_manager/signals/: __init__.py  adapters.py  merge.py  types.py
src/ai_risk_manager/stacks/: __init__.py  discovery.py
src/ai_risk_manager/triage/: __init__.py  merge.py
src/ai_risk_manager/trust/: __init__.py  outcomes.py  scoring.py
tests/: conftest.py  test_agents.py  test_api_server.py  test_artifact_io.py  test_business_invariant_examples.py  test_business_invariant_pilots.py  test_collector_plugins.py  test_context_builder.py  test_eval_isolation.py  test_eval_suite.py  test_external_judge.py  test_file_discovery.py  test_github_issue_templates.py  test_github_pr_comments.py  test_github_pr_review.py  test_graph_first_architecture.py  test_holdout_reporting.py  test_holdout_workflow.py  test_llm_runtime.py  test_merge_findings.py  test_merge_triage.py  test_milestone10_express_authz.py  test_milestone11_express_balanced.py  test_milestone12_express_integrity.py  test_milestone13_express_html.py  test_milestone14_express_ui.py  test_milestone15_fastapi_webhook_ingress.py  test_milestone16_express_job_cli_ingress.py  test_milestone17_express_event_consumer_ingress.py  test_milestone18_fastapi_integrity.py  test_milestone19_django_integrity.py  test_milestone2.py  test_milestone20_fastapi_session.py  test_milestone21_django_session.py  test_milestone5.py  test_milestone6_coverage.py  test_milestone7_django.py  test_milestone8_django_dependency.py  test_milestone9_django_missing_tests.py  test_mutation_gate.py  (+29 more)
(+53 files in other folders)
