[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-risk-manager"
version = "0.1.0"
description = "QA risk mapping tool for Python repositories (CLI + API)"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
  {name = "AI Risk Manager contributors"},
]
keywords = ["qa", "risk", "fastapi", "testing", "analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/andry/ai-risk-manager"
Repository = "https://github.com/andry/ai-risk-manager"
Issues = "https://github.com/andry/ai-risk-manager/issues"
Changelog = "https://github.com/andry/ai-risk-manager/blob/main/CHANGELOG.md"

[project.scripts]
riskmap = "ai_risk_manager.cli:app"
riskmap-api = "ai_risk_manager.api.server:app_entry"

[project.optional-dependencies]
api = [
  "fastapi>=0.110",
  "pydantic>=2.0",
  "uvicorn>=0.30",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "fastapi>=0.110",
  "httpx>=0.27",
  "pydantic>=2.0",
  "uvicorn>=0.30",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
files = ["src"]
