[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-risk-manager"
version = "0.2.0"
description = "PR-native merge-risk assistant for release and QA review"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "AI Risk Manager contributors"},
]
keywords = ["qa", "risk", "pr-review", "testing", "release-risk", "developer-tools"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/direct41/ai-risk-manager"
Repository = "https://github.com/direct41/ai-risk-manager"
Issues = "https://github.com/direct41/ai-risk-manager/issues"
Changelog = "https://github.com/direct41/ai-risk-manager/blob/main/CHANGELOG.md"

[project.scripts]
riskmap = "ai_risk_manager.cli:app"
riskmap-api = "ai_risk_manager.api.server:app_entry"

[project.optional-dependencies]
api = [
  "fastapi==0.137.0",
  "pydantic==2.13.4",
  "uvicorn==0.49.0",
]
dev = [
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "ruff==0.15.17",
  "mypy==2.1.0",
  "mutmut==3.6.0",
  "fastapi==0.137.0",
  "httpx==0.28.1",
  "pydantic==2.13.4",
  "uvicorn==0.49.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_risk_manager = [
  "samples/milestone2_fastapi/app/*.py",
  "samples/milestone2_fastapi/tests/*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
files = ["src"]

[tool.mutmut]
source_paths = ["src/ai_risk_manager"]
only_mutate = [
  "src/ai_risk_manager/rules/policy.py",
  "src/ai_risk_manager/trust/scoring.py",
  "src/ai_risk_manager/triage/merge.py",
  "src/ai_risk_manager/pr_scope.py",
]
pytest_add_cli_args_test_selection = [
  "tests/test_policy.py",
  "tests/test_trust.py",
  "tests/test_merge_triage.py",
  "tests/test_pr_scope.py",
]
timeout_multiplier = 10.0
timeout_constant = 1.0
